# pluto

./: README.md  network.conf
etc/: fstab  group  hosts  motd  passwd  subuid  sysctl.conf
etc/crontabs/: root
etc/nixos/: configuration.nix  flake.nix  hardware-configuration.nix  networking.nix
etc/nixos/modules/: akitio.nix  frangisk.nix
etc/nixos/modules/auriel/engine/: Cargo.toml  main.rs
etc/pam.d/: sshd
images/caddy-reverse-proxy/: Dockerfile  build.sh
images/cgit/: Dockerfile  build.sh  cgit.conf  cgitrc
images/git-ssh/: Dockerfile  build.sh  motd
images/git-ssh/git-shell-commands/: rm
images/lighttpd/: Dockerfile  build.sh
images/lighttpd/lighttpd/: lighttpd.conf
images/minecraft-borg-backup/: Dockerfile  build.sh  main.go
images/minecraft-server/: Dockerfile  bridge.go  build.sh  entrypoint.sh  test.sh
images/minecraft-ttyd-rcon/: Dockerfile  build.sh  ttyd-wrapper.sh  wrapper.go
images/minecraft-world-pull/: Dockerfile  build.sh  main.go
images/sws/: Dockerfile  build.sh
images/zfs-builder/: Dockerfile  build.sh  entrypoint.sh  main.go
images/zfs-editor/: Dockerfile  build.sh  get-univer.sh  main.go
images/zfs-editor/src/: editor.js  theme.js
images/zfs-editor/static/: explorer.html  index.html  pdf-viewer.html  sheets.html
modules/akitio/: check-working-tree.sh  run.sh
modules/akitio/minecraft-server/: check-working-tree.sh
modules/eligius/: run.sh
modules/frangisk/: run.sh
modules/isidore/: run.sh
modules/michel/: run-public.sh
scripts/: check-plumbing.sh  create-networks.sh  plumb.sh
(+24 files in other folders)
